@@ -23,6 +23,6 @@
 # MinGW Project, accept liability for any damages, however caused,
 # arising from the use of this software.
 #
-  c6a9068e183254c0b930ac6e1a70fd81743dc212 2020030501 package-list.xml
+  c6a9068e183254c0b930ac6e1a70fd81743dc212 2020030502 package-list.xml
 #
 # $RCSfile$: end of file
