@@ -49,9 +49,9 @@
   71b5ce19cd3f6da57625e75d0e3d7f1bfb4e698c 2012073100 mingw32-mgwport.xml
   00d41b72d8329a00a7018b7bf936dafda3618ef1 2013100400 mingw32-mingw-get.xml
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
-  2d0fee36823579871e8d747ae4d4676da6071654 2018122800 mingw32-mpc.xml
+  a3afe3d47e212a58f7d854d8badbc28db851aa34 2020030500 mingw32-mpc.xml
   21f6c9d72c41d551cb3c6310146c23414bd601c1 2020030500 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020030501 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020030502 mingw32-package-list.xml
   0b8b7868e93c4fbaab57da8ca1fcb7700905fa92 2020013100 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
