@@ -28,10 +28,13 @@
       <licence tarname="mpc-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="mpc-1.1.0-1-mingw32-dev.tar.xz">
+          <requires ge="mpfr-4.0.2-1-mingw32-dev.tar" />
+        </release>
         <release tarname="mpc-1.0.3-2-mingw32-dev.tar.xz">
-          <requires eq="mingw32-libmpc-%-mingw32-dll-3.tar" />
           <requires ge="mpfr-3.1.5-2-mingw32-dev.tar" />
         </release>
+        <requires eq="mingw32-libmpc-%-mingw32-dll-3.tar" />
       </component>
 
       <component class="doc">
@@ -49,10 +52,12 @@
       </component>
 
       <component class="info">
+        <release tarname="mpc-1.1.0-1-mingw32-info.tar.xz" />
         <release tarname="mpc-1.0.3-2-mingw32-info.tar.xz" />
       </component>
 
       <component class="lic">
+        <release tarname="mpc-1.1.0-1-mingw32-lic.tar.xz" />
         <release tarname="mpc-1.0.3-2-mingw32-lic.tar.xz" />
       </component>
     </package>
@@ -80,6 +85,10 @@
       <licence tarname="mpc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+        <release tarname="libmpc-1.1.0-1-mingw32-dll-3.tar.xz">
+          <requires ge="mingw32-libmpfr-4.0.2-mingw32-dll-6.tar" />
+          <requires ge="mingw32-libgmp-6.1.2-mingw32-dll-10.tar" />
+        </release>
         <release tarname="libmpc-1.0.3-2-mingw32-dll-3.tar.xz">
           <requires ge="mingw32-libmpfr-3.1.5-mingw32-dll-4.tar" />
           <requires ge="mingw32-libgmp-6.1.2-mingw32-dll-10.tar" />
